--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "editorconfig": "^0.15.3",
     "jwt-decode": "^2.2.0",
+    "primeng": "^9.0.0-rc.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
